# STAC-based-Satellite-Imagery-Explorer-Web-Application-with-NDVI-NDWI-Analytics

./: README.md  README_NEW.md  main.py  pyproject.toml  stac_app.py  stac_satellite.py
