[project]
name = "eoapplication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.14.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "planetary-computer>=1.0.0",
    "pyproj>=3.6.0",
    "pystac>=1.14.3",
    "pystac-client>=0.8.0",
    "rasterio>=1.5.0",
    "shapely>=2.1.2",
    "streamlit>=1.57.0",
    "streamlit-folium>=0.17.0",
]
